# sol-sensor

./: .gitignore  LOCALNET.md  README.md  TASKS.md  TASKS.ru.md  run-localnet.sh  stop-localnet.sh
.github/workflows/: programs-ci.yml
backend/: .env.example  .gitignore  README.md  jest.config.js  jest.setup.js  package-lock.json  package.json  update-coverage-badge.js
backend/scripts/: generate-keypair.ts
backend/src/: config.ts  index.ts
backend/src/middleware/: http402.test.ts  http402.ts  receiptVerifier.test.ts  receiptVerifier.ts
backend/src/routes/: faucet.test.ts  faucet.ts  health.test.ts  health.ts  sensors.test.ts  sensors.ts
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json
programs/: Anchor.toml  Cargo.toml  README.md  skills-lock.json
programs/sol-sensor/: Cargo.toml
programs/sol-sensor/src/: errors.rs  lib.rs
programs/sol-sensor/src/instructions/: claim_rewards.rs  consume_receipt.rs  init_contributor.rs  initialize_pool.rs  mod.rs  pay_for_query.rs  refund_expired.rs  register_sensor.rs  sync_rewards.rs  transfer_hook.rs
programs/sol-sensor/src/state/: contributor_state.rs  global_state.rs  hardware_entry.rs  mod.rs  query_receipt.rs  sensor_pool.rs
programs/sol-sensor/tests/: flow_tests.rs  unit_tests.rs
programs/sol-sensor/tests/fixtures/: accounts.rs
scripts/: bootstrap-devnet.ts  bootstrap-localnet.ts  check-bootstrap.ts  fund-wallet-localnet.ts  fund-wallet.ts  package-lock.json  package.json  register-demo-sensors.ts  test-payment-flow-localnet.ts  test-payment-flow.ts  tsconfig.json
scripts/lib/: instructions.ts  keypair.ts  pda.ts  rpc.ts
(+65 files in other folders)
