[package]
name = "sol-sensor"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_sensor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.0", features = ["token_2022", "associated_token"] }
spl-transfer-hook-interface = "0.9.0"
spl-tlv-account-resolution = "0.9.0"

[dev-dependencies]
mollusk-svm = "0.3.0"
litesvm = "0.6.0"
spl-token = { version = "6", features = ["no-entrypoint"] }

[build-dependencies]
