[package]
name = "sol-sensor"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_sensor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.0", features = ["token_2022", "associated_token"] }
spl-transfer-hook-interface = "0.9.0"
spl-tlv-account-resolution = "0.9.0"

[dev-dependencies]
# mollusk-svm and litesvm are deferred: both 0.3.x require Solana 2.2.x / edition-2024
# crates which conflict with Rust 1.81.0 + anchor-lang 0.32.x (Solana 2.1.x).
# Re-add once a version compatible with this toolchain is identified.
# Unit tests in tests/unit_tests.rs use only native #[cfg(test)] — no framework needed.

[build-dependencies]
